name:                ring-note
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kuranari/ring-note#readme
license:             BSD3
license-file:        LICENSE
author:              Tomohisa Kuranari
maintainer:          tomohisa.kuranari@gmail.com
copyright:           2017 Tomohisa Kuranari
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal
                     , readline
                     , Diff
  default-language:    Haskell2010

executable ring-note-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ring-note
  default-language:    Haskell2010

test-suite ring-note-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ring-note
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ring-note
